non ancora completo
-manca aggiunta rischi
-occorenza rischi
-consuntivo: che è legato all'occorenza rischi
-preventivo a finire che dipende dal consuntivo di periodo

--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -54,6 +54,7 @@
 
     \section{Organigramma}\label{sec:Organigramma}
     \input{src/Organigramma/main.tex}
+    \setcounter{secnumdepth}{0}
     \section{Appendice}\label{sec:Appendice}
     \appendix
     \input{src/Appendice/main.tex}
