--- a/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
@@ -4,8 +4,12 @@
     \caption{Tabella Incrementi}                                                                                 \\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{\textbf{Incremento}} & \textcolor{\secondaryColor}{\textbf{requisito}}& \textcolor{\secondaryColor}{\textbf{h/PT}} & \textcolor{\secondaryColor}{\textbf{h/PR}}& \textcolor{\secondaryColor}{\textbf{h/VE}}& \textcolor{\secondaryColor}{\textbf{stima in euro}}&\textcolor{\secondaryColor}{\textbf{costo effettivo in euro}}\\ \endhead
-    {Incremento 1 \glo{login}} & {R-numero-D-I } & { } & {}& {}& {}& {}\\
-    {Incremento 2 database} & {R-numero-P-O} & { }& {}& {}& {}& {} \\
-    {Incremento 3 \glo{blockchain}} & {} & {}& {}& {}& {}& {}\\
-    {Incremento 4 prenotazione via \glo{NFC}} & {} & {}& {}& {}& {}& {}\\
+    {Incremento 1 integrazione blockchain} & {R-numero-D-I } & {10 } & {10}& {10}& {}& {520}\\
+    {Incremento 2 gestionepostazioni (\glo{backend})} & {R-numero-P-O} & { }& {}& {}& {}& {} \\
+    {Incremento 3 app Android lettura \glo{NFC}} & {} & {}& {}& {}& {}& {}\\
+    {Incremento 4 creazione interfaccia admin} & {} & {}& {}& {}& {}& {}\\
+    {Incremento 5 setup \glo{Kubernetes}  } & {} & {}& {}& {}& {}& {}\\
+    {Incremento 6 autenticazione \glo{API} esposte} & {} & {}& {}& {}& {}& {}\\
 \end{longtable}
+
+
