--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Motivazioni.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Motivazioni.tex
@@ -1,3 +1,23 @@
-In un primo contatto informativo con l'azienda proponente \proponente{}, questa si è dimostrata molto aperta al dialogo, finanche alla possibilità di discutere di possibili modifiche ai \glo{requisiti} richiesti, qualora giustificati.\\
-Si evince quindi come questo modello risulti abbastanza appropriato, poiché in esso è possibile ogni volta valutare lo stato del lavoro, gli elementi e le funzionalità che devono essere poi implementati. Qualora subentrassero difficoltà, data appunto la disponibilità del proponente e la natura stessa del modello, sarà anche possibile scegliere in itinere le aggiunte o modifiche da apportare. Tutto ciò ha un impatto decisamente meno gravoso sull'intero progetto perché si cerca comunque di garantire per quanto possibile la stabilità del prodotto cosicchè, quando necessario, si potrà sempre ritornare agilmente ad uno stato precedente. \\
-Tale approccio risulta inoltre più adatto anche per il livello mediamente limitato di esperienza del gruppo \Gruppo{}, dove la gran parte dei membri si trova ad affrontare per la prima volta un progetto di tali dimensioni.
+La scelta di tale modello porta i seguenti pro e contro:\\
+\subsubsection{\textbf{Pro}}
+\begin{itemize}
+    \item facilita la generazione di software funzionante in modo rapido e precoce durante il ciclo di vita del software.
+    \item riduce i costi di consegna iniziale;
+    \item È più facile testare ed eseguire il debug durante un'iterazione piccola;
+    \item le \glo{risorse} con le skills necessarie non sono disponibili
+    \item più facile gestire il rischio perché i pezzi rischiosi vengono identificati e gestiti durante l'iterazione
+    \item in questo modello il proponente può dare un feedback ad ogni build.
+\end{itemize}
+\subsubsection{\textbf{Contro}}
+\begin{itemize}
+    \item Ha bisogno di una buona pianificazione e design;
+    \item Ha bisogno di una definizione chiara e completa dell'intero sistema prima che possa essere scomposto e costruito in modo incrementale.
+\end{itemize}
+\subsubsection{\textbf{Conclusione}}
+Questa metodologia è risultata quindi ideale perchè:
+\begin{itemize}
+    \item il livello  di esperienza del gruppo \Gruppo{} è mediamente limitato;
+    \item la maggior parte dei requisiti del capitolato C1 sono chiari e ben definiti;
+    \item è necessario(potenzialmente) immettere in anticipo un prodotto sul mercato(visto il contesto del capitolato C1);
+    \item l'azienda proponente \proponente{},si è dimostrata aperta al dialogo, dando la possibilita di contrattare modifiche ai \glo{requisiti} , qualora giustificati;
+\end{itemize}
