--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
@@ -1,20 +1,62 @@
-Si tratta del primo stadio relativo a quella che definiremo \glo{fase} di analisi. In questa parte i membri del gruppo si conoscono, prendono le decisioni iniziali, valutano i capitolati, discutono sulle modalità di lavoro da adottare ed avviano la redazione dei primi documenti interni.
-        
-        \subsubsection{Periodo di svolgimento}
-        22 ottobre 2020 - 3 dicembre 2020;
-        
-        \subsubsection{Figure professionali coinvolte}
+
+        \subsubsection{Periodo 1 fase di analisi}
+    In questa periodo i membri del gruppo si conoscono, prendono le decisioni iniziali, valutano i capitolati, discutono sulle modalità di lavoro da adottare ed avviano la redazione dei primi documenti interni.
+        \begin{itemize}
+            \item \textbf{intervallo: }22 ottobre 2020 - 3 dicembre 2020;
+            \item  \textbf{Figure professionali coinvolte}
+                    \begin{itemize}
+                        \item responsabile;
+                        \item amministratore;
+                        \item analista.
+                    \end{itemize}
+            \item \textbf{Obiettivi}
             \begin{itemize}
-                \item responsabile;
-                \item amministratore;
-                \item analista.
-            \end{itemize}
-        
-        \subsubsection{Obiettivi}
-            \begin{itemize}
+                \item presentazione team
                 \item scelta degli strumenti ed organizzazione dell'ambiente di lavoro;
                 \item scelta del nome del gruppo;
                 \item approfondimento, sia individuale che collettivo, degli strumenti scelti e dei capitolati proposti;
                 \item definizione e redazione delle \NdP{} e dello \glo{\SdF{}};
                 \item scelta definitiva del capitolato di interesse.
             \end{itemize}
+        \end{itemize}
+        
+        \subsubsection{Periodo 2 fase di analisi}
+        Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'analisi del capitolato scelto e redige una prima stesura della documentazione esterna. 
+        L'obiettivo principale di questa \glo{fase} è produrre la documentazione richiesta per il primo \glo{incontro formale} 
+        di revisione programmato. La positiva conclusione di questo periodo corrisponde di fatto alla prima \glo{milestone} ufficiale del gruppo.
+        
+        
+        \begin{itemize}
+            \item \textbf{intervallo: }4 dicembre 2020 - 11 gennaio 2021;
+            \item  \textbf{Figure professionali coinvolte}
+                    \begin{itemize}
+                        \item responsabile;
+                        \item amministratore;
+                        \item analista.
+                    \end{itemize}
+                    \item \textbf{Obiettivi}
+                    \begin{itemize}
+                        \item \glo{verifica} e correzione delle \NdP{} e dello \SdF{};
+                        \item redazione \AdR{}:
+                        \begin{itemize}
+                            \item studio e definizione dei casi d'uso;
+                            \item individuazione, classificazione ed analisi dei \glo{requisiti} di progetto;
+                            \item definizione delle modalità di \glo{tracciamento}.
+                        \end{itemize}
+                        \item redazione \PdQ{};
+                        \begin{itemize}
+                            \item studio e definizione dei criteri qualitativi del prodotto e dei processi;
+                            \item definizione dei criteri e delle modalità di verifica, di autovalutazione ed esecuzione dei test.
+                        \end{itemize}
+                        \item redazione \PdP{};
+                        \begin{itemize}
+                            \item analisi dei rischi;
+                            \item scelta e definizione di un modello di sviluppo e pianificazione del lavoro;
+                            \item definizione dell'organigramma generale del gruppo;
+                            \item calcolo del preventivo iniziale relativo allo svolgimento del lavoro;
+                        \end{itemize}
+                        \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
+                        \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RR{}.
+                    
+                    \end{itemize}
+        \end{itemize}
