--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
@@ -1,29 +1,90 @@
-Una volta approvati i \glo{requisiti} di ingresso, in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso la \glo{fase} progettuale. Appoggiandosi all'\AdR{}, in questo stadio lo scopo principale è definire e preparare tutti gli aspetti preliminari allo sviluppo vero e proprio, avviando così la progettazione architetturale del prodotto.
-        
-        \subsubsection{Periodo di svolgimento}
-        18 gennaio 2021 - 31 gennaio 2021;
-        
-        \subsubsection{Figure professionali coinvolte}
-            \begin{itemize}
-                \item responsabile;
-                \item amministratore;
-                \item progettista;
-                \item verificatore.
-            \end{itemize}
-
-        \subsubsection{Obiettivi}
+       \subsubsection{Periodo 1 fase di progettazione}
+        Una volta approvati i \glo{requisiti} di ingresso da parte del team, in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso la \glo{fase} progettuale. Appoggiandosi all'\AdR{}, in questo primo periodo di tale fase lo scopo principale è definire e preparare tutti gli aspetti preliminari allo sviluppo vero e proprio, avviando così la progettazione architetturale del prodotto.
         \begin{itemize}
-            \item correzione della documentazione secondo le direttive del committente;
-            \item strutturazione generale del sistema:
-            \begin{itemize}
-                \item organizzazione di tutti i suoi elementi;
-                \item pianificazione di massima di un ordine di sviluppo secondo i criteri di necessità, tipologia e quindi priorità dei requisiti.
-            \end{itemize}
-            \item valutazione delle componenti e tecnologie richieste:
-            \begin{itemize}
-                \item valutazione della fattibilità effettiva dell'utilizzo di tecnologia \glo{RFID};
-                \item scelta dei linguaggi e degli strumenti da utilizzare per lo sviluppo;
-            \end{itemize}
-            \item aggiornamento della documentazione.
-            
+                \item \textbf{intervallo: } 25 gennaio 2021 - 8 febbraio 2021;
+                \item  \textbf{Figure professionali coinvolte}
+                \begin{itemize}
+                    \item responsabile;
+                    \item amministratore;
+                    \item progettista;
+                    \item verificatore.
+                \end{itemize}
+                \item \textbf{Obiettivi}
+                \begin{itemize}
+                    \item valutazione critica eventuali rischi riscontrati o con alta probabilità che si riscontrino;
+                    \item correzione della documentazione;
+                    \item finalizzazione dell'AdR ancora troppo grezza, in modo da avere almeno la quasi totalità dei requisiti chiari;
+                    \item valutazione delle componenti e tecnologie richieste:
+                    \begin{itemize}
+                        \item valutazione della fattibilità effettiva dell'utilizzo di tecnologia \glo{RFID};
+                        \item contattare proponente in merito a blockchain e NFC;
+                    \end{itemize}
+
+                    \item aggiornamento della documentazione.
+                    
+                \end{itemize}
         \end{itemize}
+
+
+            \subsubsection{Periodo 2 fase di progettazione}
+        
+            Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo periodo ultima la fase di progettazione e si avvia verso la fase di sviluppo. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
+    
+            \begin{itemize}
+                \item \textbf{intervallo: }9 febbraio 2021 - 23 febbraio 2021;
+            
+            \item  \textbf{Figure professionali coinvolte}
+                \begin{itemize}
+                    \item responsabile;
+                    \item amministratore;
+                    \item progettista;
+                    \item verificatore.
+                \end{itemize}
+    
+                \item \textbf{Obiettivi}  
+                            \begin{itemize}
+                                \item scelta effettiva tecnologie rischieste a implementare requisiti obbligatori e critici coinvolti in questa fase;
+                                \item studio tecnologie coinvolte nel \glo{PoC}
+                                \item progettazione concettuale dell'architettura del sistema(technology baseline);
+                                \item definizione primi incrementi di sviluppo secondo i criteri di necessità, tipologia e quindi priorità dei requisiti;
+                            \end{itemize}
+                \end{itemize}          
+            
+                \subsubsection{Periodo 3 fase di progettazione}
+        
+                Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo periodo ultima la fase di progettazione e si avvia verso la fase di sviluppo. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
+        
+                \begin{itemize}
+                    \item \textbf{intervallo: }24 febbraio 2021 - 10 marzo 2021;
+                
+                \item  \textbf{Figure professionali coinvolte}
+                    \begin{itemize}
+                        \item responsabile;
+                        \item amministratore;
+                        \item progettista;
+                        \item programmatore;
+                        \item verificatore.
+                    \end{itemize}
+        
+                    \item \textbf{Obiettivi}
+
+                                \begin{itemize}
+                                    \item implementazione parziale infrastruttura a supporto degli incrementi definiti da sviluppare in questa fase;
+                                    \item implementazione incrementi definiti nel periodo 2 si veda la\hypersetup{
+                                        linkcolor=blue
+                                    }
+                                    \hyperlink{TabellaIncrementi}{tabella degli incrementi} in appendice;
+                                    \hypersetup{
+                                        linkcolor=black
+                                    }
+                                    \item implementazione parziale componenti a supporto dell'architettura del sistema e di futuri incrementi:
+                                            \begin{itemize}
+                                                \item setup \glo{Kubernetes};
+                                                \item \glo{backend} gestione postazioni;
+                                                \item autenticazione delle \glo{API esposte};
+                                            \end{itemize}
+                                    \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
+                                    \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RP{}.
+                                \end{itemize}
+                    \end{itemize}
+            
