--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
@@ -1,7 +1,7 @@
-Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo stadio ultima la progettazione e si avvia verso lo sviluppo. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
+Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo periodo ultima la fase di progettazione e si avvia verso la fase di sviluppo. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
-        1 febbraio 2021 - 1 marzo 2021;
+        9 febbraio 2021 - 10 marzo 2021;
         
         \subsubsection{Figure professionali coinvolte}
             \begin{itemize}
@@ -15,12 +15,16 @@ Da qui in poi si entra nella parte più specifica di costruzione del sistema. Qu
         \subsubsection{Obiettivi}    
         \begin{itemize}
             \item definizione completa delle strutture tramite diagrammi \glo{UML};
-            \item implementazione delle componenti essenziali e obbligatorie;
-            \begin{itemize}
-                \item tali componenti verranno specificate più in dettaglio nei futuri aggiornamenti del presente documento, una volta stabiliti gli incrementi necessari.
-            \end{itemize}
-            \item progettazione di base delle \glo{interfacce} utente;
-            \item \glo{verifica} del codice e delle funzionalità del prodotto;
+            \item scelta effettiva tecnologie rischieste
+
+            \item progettazione concettuale dell'architettura del sistema(technology baseline);
+            \item implementazione di parte delle componenti essenziali e obbligatorie che verrà usata come baseline per lo sviluppo verò e proprio,si rimanda alla\hypersetup{
+                linkcolor=blue
+            }
+            \hyperlink{TabellaIncrementi}{tabella degli incrementi} in appendice;
+            \hypersetup{
+                linkcolor=black
+            };
             \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
             \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RP{}.
         \end{itemize}
