--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio6.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio6.tex
@@ -1,7 +1,7 @@
-A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. Questo stadio corrisponde ad una prima parte della \glo{fase} di \glo{validazione} ed il raggiungimento dei suoi obiettivi corrisponde alla terza \glo{milestone} principale del progetto ovvero la Revisione di Qualifica. Lo scopo di fondo è ultimare l'implementazione e concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da consegnare infine un \glo{deliverable} conforme a quanto richiesto dal terzo incontro di revisione programmato.
+A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. Questo periodo corrisponde ad una prima parte della \glo{fase} di \glo{validazione} ed il raggiungimento dei suoi obiettivi corrisponde alla terza \glo{milestone} principale del progetto ovvero la Revisione di Qualifica. Lo scopo di fondo è ultimare l'implementazione e concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da consegnare infine un \glo{deliverable} conforme a quanto richiesto dal terzo incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
-        20 marzo 2021 - 2 aprile 2021;
+        \textbf{intervallo obbiettivo:}1 aprile 2021 - 15 aprile 2021;
         
         \subsubsection{Figure professionali coinvolte}
             \begin{itemize}
@@ -16,6 +16,7 @@ A questo punto si presuppone di avere un prodotto sufficientemente funzionante m
         \begin{itemize}
             \item implementazione delle componenti restanti aggiuntive ed eventuale soddisfacimento dei \glo{requisiti} facoltativi;
             \item controllo, implementazione e correzione degli aspetti qualitativi del prodotto;
+            \item mostrare un prodotto funzionante e con tutti i requisiti obbligatori soddisfatti al proponente per ricevere eventuali feedback;
             \begin{itemize}
                 \item tali aspetti sono da riferirsi allo studio fatto nel documento \PdQ{}. %(potrei sbagliarmi)
             \end{itemize}
