--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
@@ -1,32 +1,24 @@
-L'ultimo stadio conclude la \glo{fase} di \glo{validazione} e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i \glo{requisiti} richiesti sia dal proponente che dal committente. Gli obiettivi che si prepone fungono quindi da \glo{milestone} finale e devono essere soddisfatti conformemente a quanto richiesto dal quarto ed ultimo incontro di revisione programmato.
-        
-        \subsubsection{Periodo di svolgimento}
-        9 aprile 2021 - 3 maggio 2021;
-        
-        \subsubsection{Figure professionali coinvolte}
-            \begin{itemize}
-                \item responsabile;
-                \item amministratore;
-                \item progettista;
-                \item programmatore;
-                \item analista;
-                \item verificatore.
-            \end{itemize}
-
-        \subsubsection{Obiettivi}
-        \begin{itemize}
+\subsubsection{Periodo 1 fase di validazione}
+ L'ultimo periodo conclude la \glo{fase} di \glo{validazione} e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i \glo{requisiti} richiesti sia dal proponente che dal committente. Gli obiettivi che si prepone fungono quindi da \glo{milestone} finale e devono essere soddisfatti conformemente a quanto richiesto dal quarto ed ultimo incontro di revisione programmato.
+ \begin{itemize}
+         \item \textbf{intervallo obiettivo: } 9 aprile 2021 - 3 maggio 2021;
+         \item \textbf{intervallo massimale: } 9 aprile 2021 - 15 maggio 2021;
+         \item  \textbf{Figure professionali coinvolte}
+         \begin{itemize}
+            \item responsabile;
+            \item amministratore;
+            \item progettista;
+            \item programmatore;
+            \item analista;
+            \item verificatore.
+        \end{itemize}
+         \item \textbf{Obiettivi}
+         \begin{itemize}
+            \item analisi critica rischi ed eventauli altre criticità riscontrate nella fase precedente.
+            \item aggiornamento incrementi di sviluppo relativi a requisiti obbligatori in particolare e desiderabili 
             \item correzione della documentazione secondo le direttive del committente;
-            \item aggiunta e/o finalizzazione degli aspetti rimasti in sospeso o eventualmente incompleti dalle fasi precedenti;
-            \item \glo{verifica} finale del codice e delle funzionalità del prodotto;
             \begin{itemize}
                 \item con conseguente collaudo interno.
             \end{itemize}
-            \item produzione della documentazione finale;
-            \begin{itemize}
-                \item aggiornamento;
-                \item unificazione dei consuntivi di periodo in un consuntivo generale;
-                \item redazione di un preventivo a finire dettagliato e più preciso;
-                \item verifica e correzione.
-            \end{itemize}
-            \item consegna di tutto il \glo{deliverable}, in vista dell'incontro con il committente per la \RA{}.
-        \end{itemize}
+ \end{itemize}
+ \end{itemize}
