--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
@@ -23,7 +23,7 @@ Sigle identificative per i ruoli indicati nelle tabelle e nei grafici:
 \end{longtable}
 \input{./src/Preventivo/src/Preventivo/PreventivoAnalisi.tex}
 \input{./src/Preventivo/src/Preventivo/PreventivoProgettazione.tex}
-
+\input{./src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex}
 \input{./src/Preventivo/src/Preventivo/PreventivoCodifica.tex}
 
 \input{./src/Preventivo/src/Preventivo/PreventivoCollaudo.tex}
