--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoAnalisi.tex
@@ -35,9 +35,9 @@ Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti
 	\item \textbf{Analista}: {è in linea col preventivo}
 	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo dell'analista che sono molto legate tra di loro nella fase di analisi.}
 \end{itemize}
-La suddivisione a stadi di una fase permette di migliorare la produttività del team incrementalmente, visto che viene effettuato un check intermedio sostanziale alla fine di uno stadio:
+La suddivisione a periodi di una fase permette di migliorare la produttività del team incrementalmente, visto che viene effettuato un check intermedio sostanziale alla fine di uno periodo:
 \begin{itemize}
-	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello stadio;
+	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quel periodo;
 	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche e si attiva nel risolverle.
 \end{itemize}
 L'esperienza maturata dai componenti del team verrà trasmessa ad altri membri del gruppo che devono ancora lavorare in quel ruolo, al fine di ridurre le ore di pianificazione oraria per ciascun ruolo nelle fasi successive.
