--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -36,9 +36,9 @@ Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti
 	\item \textbf{Programmatore}: {Grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie allo sviluppo del PoC, ammortizzando il costo orario dell'analista;}
 	\item \textbf{Verificatore}: {Avendo più esperienza con le tecnologie richieste(alla documentazione in particolare), il numero di ore è inferiore a quelle preventivate.}
 \end{itemize}
-La suddivisione a stadi di una fase permette di migliorare la produttività del team incrementalmente, visto che viene effettuato un check intermedio sostanziale alla fine di uno stadio:
+La suddivisione a periodi di una fase permette di migliorare la produttività del team incrementalmente, visto che viene effettuato un check intermedio sostanziale alla fine di uno periodo:
 \begin{itemize}
-	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello stadio;
+	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello periodo;
 	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche e si attiva nel risolverle.
 \end{itemize}
 L'esperienza e la coesione maturata saranno cruciale nel cercare di mitigare il numero di ore richieste,visti i scostamenti orari in particolare dell'analista rispetto al preventivo iniziale, che hanno portato ad una riduzione oraria complessiva di ciascun membro.
