--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -2,7 +2,7 @@
 Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progressivi, in cui si elencano le occorrenze dei rischi effettivamente verificatisi finora. Vengono riportati:
 \begin{itemize}
     \item il codice identificativo del rischio;
-    \item lo stadio, o gli stadi, in cui si è verificato (vedasi il capitolo 4, sulla pianificazione);
+    \item il periodo, o i periodi, in cui si è verificato (vedasi il capitolo 4, sulla pianificazione);
     \item il grado di occorrenza (in questo caso indicativo di quanto spesso si sia realmente verificato);
     \item una breve descrizione specifica dell'evenienza e di come sia stata effettivamente mitigata.
 \end{itemize}
@@ -14,7 +14,7 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
         \caption{Tabella di occorrenza dei rischi}\\
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Cod.}} & 
-        \textcolor{\secondaryColor}{\textbf{Stadio}} & 
+        \textcolor{\secondaryColor}{\textbf{Periodo}} & 
         \textcolor{\secondaryColor}{\textbf{Occorrenza}} & 
         \textcolor{\secondaryColor}{\textbf{Descrizione}}\\
        
