--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -63,4 +63,4 @@
 	\end{longtable}
 }
 \subsection{Note}
-All'inizio di ogni stadio viene concordata dal team una rotazione equa delle responsabilità.
+All'inizio di ogni Periodo viene concordata dal team una eventuale rotazione equa delle responsabilità.
